feat: add npm script for vulnerabilities scanning

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "docker:build": "docker-compose build",
     "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down"
+    "docker:down": "docker-compose down",
+    "docker:scan": "docker scan nodejs2022q2-service_shlykova-server"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
